# 1-mlops-kickoff-repo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conda-lock.yml  config.yaml  environment.yml  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: ci.yml  deploy.yml
docs/presentation/: SCRIPT_PER_PAGE.md  VIDEO_SCRIPT.md  close.html  index.html  kpi.html  platform.html  proof.html  story.html
docs/presentation/assets/: app.js  styles.css
notebooks/: baseline_eda.ipynb
src/: api.py  app.py  clean_data.py  evaluate.py  features.py  infer.py  load_data.py  logger.py  main.py  train.py  utils.py  validate.py
tests/: test_api.py  test_clean_data.py  test_evaluate.py  test_features.py  test_infer.py  test_load_data.py  test_logger.py  test_main.py  test_train.py  test_utils.py  test_validate.py
