[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis_mlops"
version = "0.2.0"
description = "A production-grade MLOps Pipeline for ATP Tennis Match Prediction."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "pyyaml",
    "requests",
    "pandera",
    "wandb",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "httpx",
]
ui = [
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
