[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis_mlops"
version = "1.0.0"
description = "A production-grade MLOps Pipeline for ATP Tennis Match Prediction."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn>=1.6,<1.7",
    "joblib",
    "pyyaml",
    "requests",
    "pandera",
    "wandb",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "httpx",
]
ui = [
    "streamlit",
]

[tool.coverage.run]
omit = ["src/app.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
